--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body{
     vertical-align: top;
     /* display:inline-block; */
     position: relative;
-    top: -20px;
+    /* top: -20px; */
 }
 
-#centralBlock{
+#list{
     max-width: 500px;
 	margin: auto;
     height: 100%;
@@ -25,4 +25,9 @@ body{
     -webkit-box-shadow:0px 2px 2px #929292;
     -moz-box-shadow:0px 2px 2px #929292;
     box-shadow:0px 2px 2px #929292;
+}
+
+#sumDoc{
+    position: relative;
+    left: 370px;
 }
